force-app/main/default/objects/Account/fields/AdministrativeRegionName__c.field-meta.xml
<CustomField>
    <fullName>AdministrativeRegionName__c</fullName>
    <label>Région administrative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>