force-app/main/default/objects/Account/fields/Adresse_mail_de_l_accueil__c.field-meta.xml
<CustomField>
    <fullName>Adresse_mail_de_l_accueil__c</fullName>
    <label>Adresse mail de l&apos;accueil</label>
    <type>Email</type>
</CustomField>