force-app/main/default/objects/Account/fields/Adresse_mail_de_la_direction_si_dispo__c.field-meta.xml
<CustomField>
    <fullName>Adresse_mail_de_la_direction_si_dispo__c</fullName>
    <label>Adresse mail de la direction si dispo</label>
    <type>Email</type>
</CustomField>