force-app/main/default/objects/Account/fields/Adresse_mail_secondaire__c.field-meta.xml
<CustomField>
    <fullName>Adresse_mail_secondaire__c</fullName>
    <label>Adresse mail secondaire</label>
    <type>Email</type>
</CustomField>