force-app/main/default/objects/Account/fields/Ambassadeur__c.field-meta.xml
<CustomField>
    <fullName>Ambassadeur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ambassadeur</label>
    <type>Checkbox</type>
</CustomField>