force-app/main/default/objects/Account/fields/Ambassadeur_formula__c.field-meta.xml
<CustomField>
    <fullName>Ambassadeur_formula__c</fullName>
    <formula>IF(
 Nom_de_l_Associ__r.VIP__c = true,
				true,
				false
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ambassadeur</label>
    <type>Checkbox</type>
</CustomField>