force-app/main/default/objects/Account/fields/Autonumber_ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>Autonumber_ReadOnly__c</fullName>
    <displayFormat>email{00000}</displayFormat>
    <label>Autonumber ReadOnly</label>
    <type>AutoNumber</type>
</CustomField>