force-app/main/default/objects/Account/fields/Client_unifie_U_fr__c.field-meta.xml
<CustomField>
    <fullName>Client_unifie_U_fr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client unifié U.fr</label>
    <type>Checkbox</type>
</CustomField>