force-app/main/default/objects/Account/fields/CommercialSignCode__c.field-meta.xml
<CustomField>
    <fullName>CommercialSignCode__c</fullName>
    <label>Sigle Commercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>