force-app/main/default/objects/Account/fields/CommercialSignLabel__c.field-meta.xml
<CustomField>
    <fullName>CommercialSignLabel__c</fullName>
    <label>Enseigne Commerciale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>