force-app/main/default/objects/Account/fields/Compte_Ambassadeur__c.field-meta.xml
<CustomField>
    <fullName>Compte_Ambassadeur__c</fullName>
    <formula>IF(
				Nom_de_l_Associ__r.VIP__c = TRUE,
				IMAGE(&quot;/resource/SR_Picto_ComptesAmbassadeurs&quot;,&quot;Compte Ambassadeur&quot;,35,35),
				&quot;&quot;
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compte Ambassadeur</label>
    <type>Text</type>
</CustomField>