force-app/main/default/objects/Account/fields/CorporateFormCode__c.field-meta.xml
<CustomField>
    <fullName>CorporateFormCode__c</fullName>
    <label>Statut d&apos;entreprise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>