force-app/main/default/objects/Account/fields/CorporateFormName__c.field-meta.xml
<CustomField>
    <fullName>CorporateFormName__c</fullName>
    <label>Nom d&apos;entreprise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>