force-app/main/default/objects/Account/fields/DefaultAvailablePositions__c.field-meta.xml
<CustomField>
    <fullName>DefaultAvailablePositions__c</fullName>
    <description>Contains default number of available positions (number of customer that can enter) for each slots generated for that store</description>
    <label>Default available positions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>