force-app/main/default/objects/Account/fields/DepartmentCode__c.field-meta.xml
<CustomField>
    <fullName>DepartmentCode__c</fullName>
    <label>Code Département</label>
    <length>255</length>
    <type>Text</type>
</CustomField>