force-app/main/default/objects/Account/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Contains the email adresse of Personal Account.
It&apos;s used as External ID to match with Commerce Cloud Clients.</description>
    <externalId>true</externalId>
    <label>Email ID</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>