force-app/main/default/objects/Account/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <formula>IF(ISPICKVAL(RFM__pc,&quot;Occasionnel&quot;),IMAGE(&quot;/img/samples/stars_100.gif&quot;, &quot;1 Star&quot;),
IF(ISPICKVAL(RFM__pc,&quot;Moyen&quot;),IMAGE(&quot;/img/samples/stars_200.gif&quot;, &quot;2 Star&quot;),
IF(ISPICKVAL(RFM__pc,&quot;Bon&quot;),IMAGE(&quot;/img/samples/stars_300.gif&quot;, &quot;3 Star&quot;),
IF(ISPICKVAL(RFM__pc,&quot;Assidu&quot;),IMAGE(&quot;/img/samples/stars_400.gif&quot;, &quot;4 Stars&quot;),
IF(ISPICKVAL(RFM__pc,&quot;Fidèle&quot;),IMAGE(&quot;/img/samples/stars_500.gif&quot;, &quot;5 Stars&quot;),
IMAGE(&quot;/img/samples/stars_000.gif&quot;, &quot;0 Star&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evaluation</label>
    <type>Text</type>
</CustomField>