force-app/main/default/objects/Account/fields/FacebookLink__c.field-meta.xml
<CustomField>
    <fullName>FacebookLink__c</fullName>
    <label>Facebook</label>
    <type>Url</type>
</CustomField>