force-app/main/default/objects/Account/fields/GepCode__c.field-meta.xml
<CustomField>
    <fullName>GepCode__c</fullName>
    <label>Gep Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>