force-app/main/default/objects/Account/fields/GepLabel__c.field-meta.xml
<CustomField>
    <fullName>GepLabel__c</fullName>
    <label>Gep Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>