force-app/main/default/objects/Account/fields/GreffeCity__c.field-meta.xml
<CustomField>
    <fullName>GreffeCity__c</fullName>
    <label>Ville Greffe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>