force-app/main/default/objects/Account/fields/ID_Commerce_Cloud__c.field-meta.xml
<CustomField>
    <fullName>ID_Commerce_Cloud__c</fullName>
    <description>Unique ID of Commerce Cloud Customer</description>
    <externalId>true</externalId>
    <label>ID Commerce Cloud</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>