force-app/main/default/objects/Account/fields/InaugurationDate__c.field-meta.xml
<CustomField>
    <fullName>InaugurationDate__c</fullName>
    <label>Date d&apos;inauguration</label>
    <type>Date</type>
</CustomField>