force-app/main/default/objects/Account/fields/InternationalVATNumber__c.field-meta.xml
<CustomField>
    <fullName>InternationalVATNumber__c</fullName>
    <label>N° International TVA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>