force-app/main/default/objects/Account/fields/IsIncludedOnlineBooking__c.field-meta.xml
<CustomField>
    <fullName>IsIncludedOnlineBooking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the store is included in the online booking system for queue management</description>
    <label>Online-booking store</label>
    <type>Checkbox</type>
</CustomField>