force-app/main/default/objects/Account/fields/LoyaltyCard__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyCard__c</fullName>
    <formula>IMAGE( &quot;https://www.magasins-u.com/images/380x230_carteu&quot; ,&apos;Carte U&apos;,115,190)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carte U</label>
    <type>Text</type>
</CustomField>