force-app/main/default/objects/Account/fields/LoyaltyCardEcu__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyCardEcu__c</fullName>
    <label>Solde €uro Carte U</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>