force-app/main/default/objects/Account/fields/Magasin_Course_U__c.field-meta.xml
<CustomField>
    <fullName>Magasin_Course_U__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Magasin Course U</label>
    <type>Checkbox</type>
</CustomField>