force-app/main/default/objects/Account/fields/Magasin_de_rattachement__c.field-meta.xml
<CustomField>
    <fullName>Magasin_de_rattachement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Magasin de rattachement</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Comptes (Magasin de rattachement)</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>