force-app/main/default/objects/Account/fields/Magasin_physique__c.field-meta.xml
<CustomField>
    <fullName>Magasin_physique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Magasin physique</label>
    <type>Checkbox</type>
</CustomField>