force-app/main/default/objects/Account/fields/Magasin_U_com__c.field-meta.xml
<CustomField>
    <fullName>Magasin_U_com__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Magasin U.com</label>
    <type>Checkbox</type>
</CustomField>