force-app/main/default/objects/Account/fields/MailsRespEcommerce__c.field-meta.xml
<CustomField>
    <fullName>MailsRespEcommerce__c</fullName>
    <label>Mails Responsable eCom</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>