force-app/main/default/objects/Account/fields/Nom_de_l_Associ__c.field-meta.xml
<CustomField>
    <fullName>Nom_de_l_Associ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom de l&apos;Associé</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Magasins de l&apos;associé</relationshipLabel>
    <relationshipName>Magasins</relationshipName>
    <type>Lookup</type>
</CustomField>