force-app/main/default/objects/Account/fields/OpenStatus__c.field-meta.xml
<CustomField>
    <fullName>OpenStatus__c</fullName>
    <label>Etat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>