force-app/main/default/objects/Account/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>