force-app/main/default/objects/Account/fields/PreferedStore__c.field-meta.xml
<CustomField>
    <fullName>PreferedStore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Magasin Préféré</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Le record type du compte doit être &quot;Magasin&quot;</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Store</value>
        </filterItems>
        <infoMessage>Le record type du compte doit être &quot;Magasin&quot;</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clients - Magasin Préféré</relationshipLabel>
    <relationshipName>MagasinPrefere</relationshipName>
    <type>Lookup</type>
</CustomField>