force-app/main/default/objects/Account/fields/RegionId__c.field-meta.xml
<CustomField>
    <fullName>RegionId__c</fullName>
    <label>Id de Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>