force-app/main/default/objects/Account/fields/regionName__c.field-meta.xml
<CustomField>
    <fullName>regionName__c</fullName>
    <label>Nom de la Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>