force-app/main/default/objects/Account/fields/ShareCapital__c.field-meta.xml
<CustomField>
    <fullName>ShareCapital__c</fullName>
    <label>Capital Partagé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>