force-app/main/default/objects/Account/fields/Siren__c.field-meta.xml
<CustomField>
    <fullName>Siren__c</fullName>
    <label>Siren</label>
    <length>255</length>
    <type>Text</type>
</CustomField>