force-app/main/default/objects/Account/fields/StoreCustomerCount__c.field-meta.xml
<CustomField>
    <fullName>StoreCustomerCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>To store realtime customer count in the store</description>
    <label>Store Customer Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>