force-app/main/default/objects/Account/fields/StoreEmail__c.field-meta.xml
<CustomField>
    <fullName>StoreEmail__c</fullName>
    <label>Email du magasin</label>
    <type>Email</type>
</CustomField>