force-app/main/default/objects/Account/fields/StoreId__c.field-meta.xml
<CustomField>
    <fullName>StoreId__c</fullName>
    <externalId>true</externalId>
    <label>Code Magasin</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>