force-app/main/default/objects/Account/fields/StoreMaxCustomer__c.field-meta.xml
<CustomField>
    <fullName>StoreMaxCustomer__c</fullName>
    <defaultValue>10</defaultValue>
    <description>To store max customer that we can have in the store</description>
    <label>Store Max Customer</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>