force-app/main/default/objects/Account/fields/StoreOwnerCode__c.field-meta.xml
<CustomField>
    <fullName>StoreOwnerCode__c</fullName>
    <label>Code Associé</label>
    <length>255</length>
    <type>Text</type>
</CustomField>