force-app/main/default/objects/Account/fields/SubcontextURL__c.field-meta.xml
<CustomField>
    <fullName>SubcontextURL__c</fullName>
    <label>Sub-context URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>