force-app/main/default/objects/Account/recordTypes/Comptes_Magasins.recordType-meta.xml
<RecordType>
    <fullName>Comptes_Magasins</fullName>
    <active>true</active>
    <label>Comptes Magasins</label>
</RecordType>