force-app/main/default/objects/Account/recordTypes/Store.recordType-meta.xml
<RecordType>
    <fullName>Store</fullName>
    <active>true</active>
    <label>Magasin</label>
</RecordType>