force-app/main/default/objects/Account/validationRules/CentralTeamMemberRestrictNameEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>CentralTeamMemberRestrictNameEdit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;Store&quot;,
$Profile.Name = &quot;Centrale : Service Client Team Member&quot;,
ISCHANGED( Name )
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Le changement de nom est limité pour les utilisateurs avec un profil Centrale Team Member.</errorMessage>
</ValidationRule>