force-app/main/default/objects/Account/validationRules/VR_Phone_10_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Phone_10_digits</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
					NOT(ISBLANK(Phone)),
					LEN(Phone) &lt;&gt; 10
					)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Le numéro de téléphone doit comporter 10 chiffres.</errorMessage>
</ValidationRule>