force-app/main/default/objects/Account/listViews/Clients.listView-meta.xml
<ListView>
    <fullName>Clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PreferedStore__c</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Client</value>
    </filters>
    <label>Clients</label>
    <sharedTo>
        <group>Centrale_Service_Client</group>
    </sharedTo>
</ListView>