force-app/main/default/objects/Account/listViews/Magasins.listView-meta.xml
<ListView>
    <fullName>Magasins</fullName>
    <columns>StoreId__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CommercialSignLabel__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>StoreEmail__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>IsActive__c</columns>
    <columns>Compte_Ambassadeur__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Store</value>
    </filters>
    <label>Magasins</label>
</ListView>