force-app/main/default/objects/Account/listViews/Magasins_Ambassadeurs.listView-meta.xml
<ListView>
    <fullName>Magasins_Ambassadeurs</fullName>
    <columns>Compte_Ambassadeur__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CommercialSignLabel__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>StoreId__c</columns>
    <columns>StoreEmail__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ambassadeur_formula__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Magasins Ambassadeurs</label>
    <sharedTo>
        <group>Centrale_Service_Client</group>
    </sharedTo>
</ListView>